istio-system/istioconfig/istio-insgress-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: common-external-ingress
  namespace: istio-system
  annotations: {}
  labels:
    app: common-external-ingress
spec:
  ingressClassName: alb
  rules:
  - host: "*.mydomain.com"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: istio-ingressgateway
            port:
              number: 80
